--- a/index.html
+++ b/index.html
@@ -61,18 +61,25 @@
         </div>
     </section>
 
-    <section id="intro" class="white-bg section main-content top3-content">
-        <h2>News Coverage and Some surprises</h2>
-        <p>The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and some
-            surprises at the machine’s performance. This post details some background information on the experience of
-            porting Firefox to run natively on these CPUs.</p>
+    <section id="intro" class="white-bg main-content">
+        <div class="intro-section">
+            <h2>News Cover bring a new surprise</h2>
+            <p>The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and
+                some
+                surprises at the machine’s performance. This post details some background information on the experience
+                of
+                porting Firefox to run natively on these CPUs.</p>
 
-        <p>We’ll start with some background on the Mac transition and give an overview of Firefox internals that needed
-            to know about the new architecture, before moving on to the concept of Universal Binaries.</p>
+            <p>We’ll start with some background on the Mac transition and give an overview of Firefox internals that
+                needed
+                to know about the new architecture, before moving on to the concept of Universal Binaries.</p>
 
-        <p>We’ll then explain how DRM/EME works on the new platform, talk about our experience with macOS Big Sur, and
-            discuss various updater problems we had to deal with. We’ll conclude with the release and an overview of
-            various other improvements that are in the pipeline.</p>
+            <p>We’ll then explain how DRM/EME works on the new platform, talk about our experience with macOS Big Sur,
+                and
+                discuss various updater problems we had to deal with. We’ll conclude with the release and an overview of
+                various other improvements that are in the pipeline.</p>
+
+        </div>
     </section>
 
     <section id="top-3" class="grid-one main-bg section">
